--- a/package.json
+++ b/package.json
@@ -6,20 +6,31 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "up": "docker volume prune -f && docker compose up",
+    "down": "docker compose down",
     "lint": "next lint"
   },
   "dependencies": {
+    "better-auth": "^1.1.10",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.3",
+    "next": "15.1.3",
+    "pg": "^8.13.1",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "tsx": "^4.19.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
