--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "better-auth": "^1.1.10",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "next": "15.1.3",
