--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "migrate": "bunx drizzle-kit push"
   },
   "dependencies": {
+    "@types/ws": "^8.5.13",
     "better-auth": "^1.1.10",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "next": "15.1.3",
+    "next-ws": "^1.1.1",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
     "tsx": "^4.19.2",
+    "ws": "^8.18.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
