--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^2.10.7",
     "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
+    "redis": "^4.7.0",
     "tsx": "^4.19.2",
     "ws": "^8.18.0",
     "zod": "^3.24.1"
