--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
+    "fabric": "^6.5.4",
     "next": "15.1.3",
     "next-ws": "^1.1.1",
     "pg": "^8.13.1",
