--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.0.0",
     "redis": "^4.7.0",
     "tsx": "^4.19.2",
+    "uuid": "^11.0.4",
     "ws": "^8.18.0",
     "zod": "^3.24.1"
   },
