--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/css": "^11.13.5",
     "@emotion/react": "^11.14.0",
+    "@types/underscore": "^1.13.0",
     "@types/ws": "^8.5.13",
     "better-auth": "^1.1.10",
     "bootstrap": "^5.3.3",
@@ -29,6 +30,7 @@
     "react-dom": "^19.0.0",
     "redis": "^4.7.0",
     "tsx": "^4.19.2",
+    "underscore": "^1.13.7",
     "uuid": "^11.0.4",
     "ws": "^8.18.0",
     "zod": "^3.24.1"
