Database now saves the board state

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/ws": "^8.5.13",
     "better-auth": "^1.1.10",
     "bootstrap": "^5.3.3",
+    "canvas": "^3.0.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "fabric": "^6.5.4",
