--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "fabric": "^6.5.4",
+    "jspdf": "^2.5.2",
     "next": "15.1.3",
     "next-ws": "^1.1.1",
     "pg": "^8.13.1",
