--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./docker:/docker-entrypoint-initdb.d
+      - ./docker/sql:/docker-entrypoint-initdb.d
 
   keycloak:
     image: keycloak/keycloak:latest
@@ -39,14 +39,5 @@ services:
       - start-dev
       - --import-realm
 
-  # redis:
-  #   image: redis:latest
-  #   ports:
-  #     - "6379:6379"
-  #   command: redis-server --save 20 1 --loglevel warning
-  #   volumes:
-  #     - redis-data:/data
-
 volumes:
   postgres_data:
-  # redis-data:
