--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - KC_REALM_NAME=realm
 
     volumes:
-      - ./keycloak-config.json:/opt/keycloak/data/import/keycloak-config.json
+      - ./docker/keycloak-config.json:/opt/keycloak/data/import/keycloak-config.json
     ports:
       - "8080:8080"
     depends_on:
